# ttsds

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.cursor/rules/: clean-code.mdc  python.mdc
.github/workflows/: tests.yml
docs/: STRUCTURE.md  gen_ref_nav.py  index.md  testing.md
docs/about/: citation.md  license.md
docs/contributing/: code-style.md  development.md  testing.md
docs/reference/: SUMMARY.md  benchmarks.md  ttsds.md  utils.md
docs/reference/api/: ttsds.md
docs/reference/api/benchmarks/: benchmark.md  environment.md  generic.md  index.md  intelligibility.md  prosody.md  speaker.md
docs/reference/api/benchmarks/environment/: index.md  voicerestore.md  wada_snr.md
docs/reference/api/benchmarks/general/: index.md  mhubert.md  wav2vec2.md  wav2vec2_xlsr.md  wavlm.md
docs/reference/api/benchmarks/generic/: hubert.md  index.md
docs/reference/api/benchmarks/intelligibility/: index.md  mwhisper_activations.md  w2v2_activations.md  w2v2_xlsr_activations.md  whisper_activations.md
docs/reference/api/benchmarks/prosody/: allosaurus.md  hubert_token.md  index.md  mhubert_token.md  mpm.md  pitch.md
docs/reference/api/benchmarks/speaker/: dvector.md  index.md  wespeaker.md
docs/reference/api/util/: cache.md  dataset.md  distances.md  index.md  measures.md  mpm.md  mpm_modules.md  parallel_distances.md
docs/reference/benchmarks/: benchmark.md  index.md
docs/reference/util/: cache.md  dataset.md  distances.md  index.md  measures.md  mpm.md  mpm_modules.md  parallel_distances.md
docs/user-guide/: advanced.md  benchmarks.md  configuration.md  installation.md  quickstart.md
examples/getting_started/: .gitignore  evaluation.py  results_all.csv  setup.sh
examples/tts_arena/: benchmark_ttsarena.py  results.csv
examples/tts_arena/csv/: correlations.csv  gt_score.csv  results_paper.csv  tts_arena_16_06_24.csv  utmos.csv  wvmos.csv
examples/v2/: .gitignore  evaluation.py  plots.py  results_emilia.csv  results_emilia_all.csv  results_librilatest.csv  results_librilatest_all.csv  results_librittsr_all.csv  results_librittsr_hubert_token.csv  results_myst_all.csv  results_torgo-ctr_all.csv  results_torgo-dys.csv  results_torgo-dys_all.csv  results_torgo-dys_all.csv.old  run_eval.sh  setup.sh  v2_evaluation.py
examples/v2/archive/: results_emilia_whisper_activations.csv  results_librilatest_activations.csv  results_librittsr.csv  results_librittsr_activations.csv  results_librittsr_allosaurus.csv  results_librittsr_whisper.csv  results_myst.csv  results_torgo-ctr.csv  results_torgot-ctr.csv
scripts/: generate_badges.py
src/ttsdb/: __init__.py
src/ttsdb/benchmarks/: benchmark.py
src/ttsdb/benchmarks/environment/: voicefixer.py  wada_snr.py
src/ttsdb/benchmarks/general/: hubert.py  wav2vec2.py  wavlm.py
src/ttsdb/benchmarks/intelligibility/: w2v2_wer.py  whisper_wer.py
src/ttsdb/benchmarks/prosody/: hubert_token.py  mpm.py  pitch.py
src/ttsdb/benchmarks/speaker/: dvector.py  wespeaker.py
src/ttsdb/util/: cache.py  dataset.py  kaldi.py  measures.py
src/ttsds/: __about__.py  __init__.py  ttsds.py
src/ttsds/benchmarks/: __init__.py  benchmark.py
src/ttsds/benchmarks/environment/: __init__.py  voicefixer.py  voicerestore.py  wada_snr.py
src/ttsds/benchmarks/general/: hubert.py  wav2vec2.py  wav2vec2_xlsr.py  wavlm.py
src/ttsds/benchmarks/generic/: __init__.py  hubert.py  mhubert.py  wav2vec2.py  wav2vec2_xlsr.py  wavlm.py
src/ttsds/benchmarks/intelligibility/: __init__.py  hubert_activations.py  mwhisper_activations.py  w2v2_activations.py  w2v2_wer.py  w2v2_xlsr_activations.py  whisper_activations.py  whisper_wer.py
src/ttsds/benchmarks/prosody/: __init__.py  allosaurus.py  hubert_token.py  mhubert_token.py  mpm.py  pitch.py
src/ttsds/benchmarks/speaker/: __init__.py  dvector.py  wespeaker.py
src/ttsds/dvector/: README.md
src/ttsds/util/: __init__.py  cache.py  dataset.py  distances.py  measures.py  mpm.py  mpm_modules.py  parallel_distances.py
tests/: basic_test.py  conftest.py  pytest.ini  run_tests.py  test_benchmarks.py
tests/integration/: test_benchmark_suite.py
tests/unit/: import_test.py  simple_test.py  test_ttsds.py
tests/unit/benchmarks/: benchmark_test_template.py  test_benchmark.py
tests/unit/benchmarks/speaker/: test_dvector.py
tests/unit/util/: test_cache.py  test_dataset.py
