[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttsds"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "allosaurus>=0.1.0",
  "jiwer>=2.2.0",
  "librosa>=0.10.0",
  "lightning>=1.3.0",
  "numpy>=1.21.0",
  "openai-whisper==20231117",
  "pandas>=1.3.0",
  "pesq>=0.0.1",
  "pyannote.audio==3.1.*",
  "pyworld>=0.2.0",
  "simple-hifigan==0.1.1",
  "statsmodels>=0.12.0",
  "torch>=2.0.0",
  "tqdm>=4.61.0",
  "transformers>=4.0.0",
  "voicefixer>=0.1.0",
  "wespeaker-unofficial>=0.0.1",
  "wvmos==1.0",
]

[project.urls]
Documentation = "https://github.com/ttsds/ttsds#readme"
Issues = "https://github.com/ttsds/ttsds/issues"
Source = "https://github.com/ttsds/ttsds"

[tool.hatch.version]
path = "src/ttsds/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["src/ttsds"]
exclude = [
  "src/ttsds/data/*.pkl.gz"
]


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest>=6.0.0",
  "streamlit>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ttsds tests}"

[tool.coverage.run]
source_pkgs = ["ttsds", "tests"]
branch = true
parallel = true
omit = [
  "src/ttsds/__about__.py",
]

[tool.coverage.paths]
ttsds = ["src/ttsds", "*/ttsds/src/ttsds"]
tests = ["tests", "*/ttsds/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.metadata]
allow-direct-references = true